Add add to litner button while selecting text in webview and bold texts while playing video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="beginner">مبتدی</string>
     <string name="know">بلدم</string>
     <string name="dont_know">بلد نیستم</string>
+    <string name="add_to_litner">اضافه به لایتنر</string>
 </resources>
