--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="know">بلدم</string>
     <string name="dont_know">بلد نیستم</string>
     <string name="add_to_litner">اضافه به لایتنر</string>
+    <string name="phrase">عبارت</string>
+    <string name="desc">توضیحات</string>
 </resources>
