Implement progress dialog and use it in add to leitner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="add_to_litner">اضافه به لایتنر</string>
     <string name="phrase">عبارت</string>
     <string name="desc">توضیحات</string>
+    <string name="message_add_to_leitner">عبارت مورد نظر با موفقیت به لایتنر اضافه شد</string>
 </resources>
