--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title">عنوان</string>
     <string name="no_leitner">کارت دیگری برای مرور در این تاریخ وجود ندارد</string>
     <string name="no_leitner_list">کارتی برای مرور در این تاریخ وجود ندارد</string>
+    <string name="error_code">کد وارد شده صحیح نیست</string>
 </resources>
