--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="error_code">کد وارد شده صحیح نیست</string>
     <string name="cartFront">روی کارت</string>
     <string name="cartBack">پشت کارت</string>
+    <string name="notify_channel">Espica notify channel</string>
 </resources>
