Use a PlayerService for player activity and create NotificationManager class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="cartFront">روی کارت</string>
     <string name="cartBack">پشت کارت</string>
     <string name="notify_channel">Espica notify channel</string>
+    <string name="pause">توقف</string>
+    <string name="play">پخش</string>
 </resources>
